--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-config/database.yml
-config/config.yml
-.bundle
-db/*.sqlite3
-log/*.log
-tmp/
-*.swo
-*.swp
-.rvmrc
-.sass-cache/
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+node_modules/
+.DS_Store
